[package]
name = "tenwinterforty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.209"
axum = { version = "0.7.5", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
surrealdb = "1.5.4"
once_cell = "1.19.0"
